# DocumentAgent

./: .env.example  .gitignore  AGENT_PROGRESS.md  README.md  agent_action_plan.md  pyproject.toml
backend/: alembic.ini
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  documents.py  health.py  status.py  upload.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py  tracing.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_document_chunks_unique_document_index.py
backend/app/models/: __init__.py  base.py  chunk.py  document.py  organisation.py  user.py
backend/app/schemas/: document.py  upload.py  user.py
backend/app/services/: storage.py
backend/app/services/ingestion/: chunker.py  embedder.py  indexer.py  parser.py  pipeline.py
backend/app/services/queue/: dlq.py  producer.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/integration/: test_upload_pipeline.py
backend/tests/unit/: test_chunker.py  test_parser.py
backend/workers/: celeryconfig.py  kafka_consumer.py  tasks.py
infra/: docker-compose.yml  prometheus.yml
scripts/: check_agent_progress.py
